tests/api/reference/negative/13-toml-negative-integer.asm
const invalid = toml.parse("value = -1")
